--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SOURCE_DB_HOST=172.16.22.21
-SOURCE_DB_PORT=17159
-REPLICA_DB_HOST=redis-19963.re-cluster1.ps-redislabs.org
-REPLICA_DB_PORT=19963
-BONUS_DB_HOST=redis-14658.re-cluster1.ps-redislabs.org
-BONUS_DB_PORT=14658
+SOURCE_DB_HOST=
+SOURCE_DB_PORT=
+REPLICA_DB_HOST=
+REPLICA_DB_PORT=
+BONUS_DB_HOST=
+BONUS_DB_PORT=
